# daily_journal

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 51638969e8e9_change_col_names.py  7079ea392a1f_refresh_tokens_tbl.py  df763d95c88d_written_at_entries_col.py  ea3feb93b5be_out_of_bed_at_timestamp.py  f0ad6829f426_adapt_users_tbl.py  f5daa82943ab_initital_migration.py
backend/containerisation/: Dockerfile
backend/src/api/: __init__.py
backend/src/api/api_schemas/: generic.py
backend/src/api/api_schemas/core/: __init__.py  auth.py  users.py
backend/src/api/api_schemas/journal/: __init__.py  entries.py  metrics.py  threads.py
backend/src/api/db/: base_data_manager.py  database.py
backend/src/api/db/data_managers/: __init__.py
backend/src/api/db/models/: base.py
backend/src/api/middleware/: auth.py  ip_filter.py  security_headers.py
backend/src/api/routes/: healthcheck.py  main.py  route_metadata.py  route_prefix.py  route_types.py
backend/src/api/services/: base_service.py
backend/src/api/services/core/: auth.py  refresh_tokens.py  users.py
backend/src/api/services/journal/: __init__.py  entries.py  metrics.py  threads.py
backend/src/api/utils/: cookies.py  encryption.py  logger.py  utils.py
backend/tests/: conftest.py
backend/tests/test_data/core/users/: invalid_email.json  valid.json  (+1 more)
backend/tests/test_routes/test_core/: test_users.py
backend/tests/test_routes/test_journal/: test_entries.py  test_metrics.py  test_threads.py
(+93 files in other folders)
