[project]
name = "daily-journal-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "jggolden17",email = "jggolden17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.44,<3.0.0",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.0.0,<3.0.0",
    "greenlet (>=3.2.4,<4.0.0)",
    "google-auth[requests] (>=2.45.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)"
]

[tool.poetry]
packages = [{include = "api", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
httpx = ">=0.27.0"
types-psycopg2 = ">=2.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
